# cobalt-lang

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  o.cbytes  test.cb  test.cbx
.cargo/: config.toml
.github/workflows/: linux-build.yml  macos-build.yml  windows-build.yml
src/: errors.rs  lib.rs  main.rs
src/codegen/: generator.rs
src/interpreter/: constants.rs  mod.rs  vm.rs
src/lexer/: lexer.rs  tokens.rs
src/parser/: ast.rs  parser.rs
src/utils/: bytes.rs  files_u8.rs  mod.rs
tests/: divide_by_zero.cb  divide_by_zero.cbx  if_stmts.cb  if_stmts.cbx  logical_exprs.cb  logical_exprs.cbx  scopes.cb  scopes.cbx  stuff.cb  stuff.cbx  test.cb  test.cbx
