[package]
name = "cobalt-lang"
version = "0.10.1"
edition = "2024"
authors = ["Devitzer <me@devitzer.dev>"]
description = "A simple high level interpreted language with strong static typing."
license = "GPL-3.0"
repository = "https://github.com/cobalt-lang/cobalt-lang"

[dependencies]
argh = "0.1.13"
colored = "3.0.0"
dialoguer = "0.12.0"
phf = { version = "0.13.1" , features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

[profile.release]
lto = true
